tests/ui/unknown_visibility.stderr
error: expected literal or `inherit`
 --> $DIR/unknown_visibility.rs:4:24
  |
4 | #[shorthand(visibility(garbage))]
  |                        ^^^^^^^
